test/src/objects/Review1__c.object
<CustomObject>
    <description>Represents an interviewer&apos;s assessment of a particular candidate.</description>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate1__c</fullName>
        <formula>HYPERLINK( Job_Application1__r.Candidate__r.Id , Job_Application1__r.Candidate__r.First_Name__c  &amp;  &quot; &quot;  &amp; Job_Application1__r.Candidate__r.Last_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application1__c</fullName>
        <label>Job Application1</label>
        <referenceTo>Job_Application1__c</referenceTo>
        <relationshipLabel>Review1s</relationshipLabel>
        <relationshipName>Review1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position1__c</fullName>
        <formula>Job_Application1__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>Enter a 1-5 rating of the candidate.</inlineHelpText>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Review1</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review1 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Scale_Rule</fullName>
        <active>true</active>
        <description>Rating must be from 1 to 5.</description>
        <errorConditionFormula>(Rating__c &lt; 0) || (Rating__c &gt; 6)</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Invalid rating. Rating must be from 1 to 5.</errorMessage>
    </validationRules>
</CustomObject>